--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                         <li class="nav_home"><a href="#home"><span data-text="HOME">HOME</span></a></li>
                         <li class="nav_about"><a href="#about"><span data-text="ABOUT ME">ABOUT ME</span></a></li>
                         <li class="nav_web"><a href="#web"><span data-text="WEB">WEB</span></a></li>
-                        <li class="nav_web2"><a href="#"><span data-text="GRAPHIC">GRAPHIC</span></a></li>
+                        <li class="nav_web2"><a href="#"><span data-text="GRAPHIC">GALLERY</span></a></li>
                         <li class="nav_contact"><a href="#contact"><span data-text="CONTACT">CONTACT</span></a></li>
                     </ul>
                 </div><!-- //nav -->
@@ -99,7 +99,7 @@
                             <h2 data-2900="display:none;" data-3100="display:block;">#PORTFOLIO</h2>
                             <p data-2000="display:block;" data-2300="display:none;">안녕하세요! 저의 이름은 이진혁입니다.</p>
                             <p data-2000="display:none;" data-2300="display:block;" data-2900="display:block;"
-                                data-3100="display:none;">저는 성실, 노력이 저의 장점입니다.</p>
+                                data-3100="display:none;">성실 , 노력 , 열정이 저의 장점입니다.</p>
                             <p data-2900="display:none;" data-3100="display:block;">저의 포트폴리오를 봐주세요. <br>
                                 감사합니다!
                             </p>
@@ -687,7 +687,7 @@
                     <div class="panerl_3" data-23600="left:172px;" data-26600="left:-1511px">
                         <div class="p_tit p_tit3">
                             <span class="p_num">Portfolio 03</span>
-                            <span class="p_name">나의작품들</span>
+                            <span class="p_name">GALLERY</span>
                         </div>
 
                         <div class="web_fo3">
@@ -712,13 +712,13 @@
                                         <img src="images/art2.jpg" alt="">
                                     </div>
                                     <div class="swiper-slide">
-                                        <img src="images/art3.jpg" alt="">
-                                    </div>
-                                    <div class="swiper-slide">
                                         <img src="images/art4.jpg" alt="">
                                     </div>
                                     <div class="swiper-slide">
                                         <img src="images/art5.jpg" alt="">
+                                    </div>
+                                    <div class="swiper-slide">
+                                        <img src="images/깔끄미청소.png" alt="">
                                     </div>
                                     <div class="swiper-slide">
                                         <img src="images/부경대.jpeg" alt="">
@@ -742,35 +742,15 @@
                                         <img src="images/유니세프.png" alt="">
                                     </div>
                                     <div class="swiper-slide">
-                                        <img src="img/artwork/po13.png" alt="">
+                                        <img src="images/현대아파트.png" alt="">
                                     </div>
                                     <div class="swiper-slide">
-                                        <img src="img/artwork/po14.jpg" alt="">
+                                        <img src="images/카시아속초.png" alt="">
                                     </div>
                                     <div class="swiper-slide">
-                                        <img src="img/artwork/po15.jpg" alt="">
+                                        <img src="images/호반건설.png" alt="">
                                     </div>
-                                    <div class="swiper-slide">
-                                        <img src="img/artwork/po16.jpg" alt="">
-                                    </div>
-                                    <div class="swiper-slide">
-                                        <img src="img/artwork/po17.png" alt="">
-                                    </div>
-                                    <div class="swiper-slide">
-                                        <img src="img/artwork/po18.jpg" alt="">
-                                    </div>
-                                    <div class="swiper-slide">
-                                        <img src="img/artwork/po19.jpg" alt="">
-                                    </div>
-                                    <div class="swiper-slide">
-                                        <img src="img/artwork/po20.png" alt="">
-                                    </div>
-                                    <div class="swiper-slide">
-                                        <img src="img/artwork/po21.jpg" alt="">
-                                    </div>
-                                    <div class="swiper-slide">
-                                        <img src="img/artwork/po22.jpg" alt="">
-                                    </div>
+
                                 </div>
 
                             </div>
