--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
                             </div><!-- //bugyeonbox -->
                             <div class="sangsangbox">
                                 <div class="slide_wrap">
-                                    <div class="monitor" data-16700="transform:translateY(12%); ;"
+                                    <div class="monitor" data-15900="transform:translateY(12%); ;"
                                         data-15000="transform:translateY(0%); opacity:1;">
                                         <img src="images/monitor.png" alt="모니터">
                                         <div class="monitor_box bottom_box"></div>
@@ -400,8 +400,8 @@
                             </div><!-- //sangsangbox -->
                             <div class="lhbox">
                                 <div class="slide_wrap">
-                                    <div class="monitor" data-17500="transform:translateY(10%); ;"
-                                        data-17800="transform:translateY(13%); opacity:1;">
+                                    <div class="monitor" data-15900="transform:translateY(12%); ;"
+                                        data-15000="transform:translateY(0%); opacity:1;">
                                         <img src="images/monitor.png" alt="모니터">
                                         <div class="monitor_box bottom_box"></div>
                                     </div><!-- //monitor -->
@@ -512,7 +512,7 @@
                     <div class="panerl_2" data-18000="left:117px" data-21300="left:-1565px">
                         <div class="p_tit  p_tit2">
                             <span class="p_num">Portfolio 02</span>
-                            <span class="p_name">펜스타 &middot; 우주의조약돌 &middot; Unicf </span>
+                            <span class="p_name p_center">펜스타 &middot; 우주의조약돌 &middot; Unicf &middot; 깔끄미청소 </span>
                         </div>
                         <div class="web_fo2" data-21500="transform:translateX(0%)"
                             data-23000="transform:translateX(-65%)">
@@ -521,7 +521,7 @@
                             <div class="panstarbox">
                                 <div class="slide_wrap">
                                     <div class="monitor" data-21700="transform:translateY(13%); ;"
-                                        data-20000="transform:translateY(0%); opacity:1;">
+                                        data-20000="transform:translateY(10%); opacity:1;">
                                         <img src="images/monitor.png" alt="모니터">
                                         <div class="monitor_box bottom_box"></div>
                                     </div><!-- //monitor -->
@@ -630,7 +630,7 @@
                             <!-- //유니세프 -->
                             <div class="unicefbox">
                                 <div class="slide_wrap">
-                                    <div class="monitor" data-23200="transform:translateY(15%); ;"
+                                    <div class="monitor" data-22200="transform:translateY(13%); ;"
                                         data-21000="transform:translateY(0%); opacity:1;">
                                         <img src="images/monitor.png" alt="모니터">
                                         <div class="monitor_box bottom_box"></div>
@@ -675,6 +675,62 @@
                                             </li>
 
                                             <li><a href="https://1213212132.github.io/yuin/"
+                                                    onclick="window.open(this.href,'_blanck','width=375, height=900'); return false">Mobile</a>
+                                            </li>
+                                        </ul>
+                                    </div> <!-- //btn -->
+                                </div><!-- //m_desc -->
+                            </div><!-- //유니세프box -->
+
+
+
+                            <div class="cleanbox">
+                                <div class="slide_wrap">
+                                    <div class="monitor" data-23200="transform:translateY(13%); ;"
+                                        data-21000="transform:translateY(0%); opacity:1;">
+                                        <img src="images/monitor.png" alt="모니터">
+                                        <div class="monitor_box bottom_box"></div>
+                                    </div><!-- //monitor -->
+                                    <div class="tablet" data-23000="transform:translateX(-100%);"
+                                        data-22000="transform:translateX(0%); opacity:1;">
+                                        <img src="images/tablet.png" alt="타블렛">
+                                        <div class="tablet_box bottom_box"></div>
+                                    </div>
+                                    <div class="mobile" data-23000="transform:translateX(75%); "
+                                        data-22000="transform:translateX(0%); opacity:1;">
+                                        <img src="images/mobile.png" alt="모바일">
+                                        <div class="mobile_box bottom_box"></div>
+                                    </div>
+                                </div> <!-- //slide_wrap -->
+                                <div class="clean_desc">
+
+                                    <div class="clean_logo">
+                                        <h3>깔끄미청소</h3>
+                                    </div>
+                                    <!--//m_logo -->
+                                    <div class="clean_info">
+                                        <span>info</span>
+                                        <p> 그누보드들 사용해 <br>
+                                            작업을 하였습니다.
+
+                                        </p>
+
+                                        <span>type</span>
+                                        <p>반응협웹</p>
+                                        <span>tool</span>
+                                        <p>HTML5 , CSS3 , JAVASCRIPT, 그누보드</p>
+
+                                    </div> <!-- //m_info -->
+                                    <div class="btn">
+                                        <ul>
+                                            <li><a href="http://ljf135798.dothome.co.kr/" target="_blank">Website</a>
+                                            </li>
+
+                                            <li><a href="http://ljf135798.dothome.co.kr/"
+                                                    onclick="window.open(this.href,'_blanck','width=768, height=900'); return false">Tablet</a>
+                                            </li>
+
+                                            <li><a href="http://ljf135798.dothome.co.kr/"
                                                     onclick="window.open(this.href,'_blanck','width=375, height=900'); return false">Mobile</a>
                                             </li>
                                         </ul>
