--- a/index.html
+++ b/index.html
@@ -229,10 +229,9 @@
                         data-9700="opacity:1; transform:translate(0%,0%);  background-color:rgb(255,255,255);"
                         data-10500="transform:translate(100%,0%);  background-color:rgb(244,244,244);">
                         <span>#08</span>
-                        <h2>POTOSHOP & IIIUSTRATOR</h2>
+                        <h2>POTOSHOP</h2>
                         <ul data-10300="display:block">
                             <li> 전체적인 툴 사용가능</li>
-                            <li> 아이콘 제작 가능 </li>
                         </ul>
 
                     </div>
