--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                         <li class="nav_home"><a href="#home"><span data-text="HOME">HOME</span></a></li>
                         <li class="nav_about"><a href="#about"><span data-text="ABOUT ME">ABOUT ME</span></a></li>
                         <li class="nav_web"><a href="#web"><span data-text="WEB">WEB</span></a></li>
-                        <li class="nav_web2"><a href="#"><span data-text="GRAPHIC">GALLERY</span></a></li>
+                        <li class="nav_web2"><a href="#"><span data-text="TRAINING">TRAINING</span></a></li>
                         <li class="nav_contact"><a href="#contact"><span data-text="CONTACT">CONTACT</span></a></li>
                     </ul>
                 </div><!-- //nav -->
@@ -742,7 +742,7 @@
                     <div class="panerl_3" data-23600="left:172px;" data-26600="left:-1511px">
                         <div class="p_tit p_tit3">
                             <span class="p_num">Portfolio 03</span>
-                            <span class="p_name">GALLERY</span>
+                            <span class="p_name">TRAINING</span>
                         </div>
 
                         <div class="web_fo3">
@@ -773,46 +773,74 @@
                                         <img src="images/art5.jpg" alt="">
                                     </div>
                                     <div class="swiper-slide">
-                                        <img src="images/깔끄미청소.png" alt="">
+                                        <a href="http://ljf135798.dothome.co.kr/" target="_blank">
+                                            <img src="images/깔끄미청소.png" alt="">
+                                        </a>
                                     </div>
                                     <div class="swiper-slide">
-                                        <img src="images/부경대.jpeg" alt="">
+                                        <a href="https://1213212132.github.io/buking-re/" target="_blank">
+                                            <img src="images/부경대.jpeg" alt="">
+                                        </a>
                                     </div>
                                     <div class="swiper-slide">
-                                        <img src="images/상상짬뽕.png" alt="">
+                                        <a href="https://1213212132.github.io/sangsang/" target="_blank">
+                                            <img src="images/상상짬뽕.png" alt="">
+                                        </a>
                                     </div>
                                     <div class="swiper-slide">
-                                        <img src="images/LH건설.png" alt="">
+                                        <a href="https://1213212132.github.io/lh_toge/" target="_blank">
+                                            <img src="images/LH건설.png" alt="">
+                                        </a>
                                     </div>
                                     <div class="swiper-slide">
-                                        <img src="images/아웃백.png" alt="">
+                                        <a href="https://1213212132.github.io/out_back/" target="_blank">
+                                            <img src="images/아웃백.png" alt="">
+                                        </a>
                                     </div>
                                     <div class="swiper-slide">
-                                        <img src="images/팬스타.png" alt="">
+                                        <a href="https://1213212132.github.io/new_ship_repones/" target="_blank">
+                                            <img src="images/팬스타.png" alt="">
+                                        </a>
                                     </div>
                                     <div class="swiper-slide">
-                                        <img src="images/우주의조약돌.png" alt="">
+                                        <a href="https://1213212132.github.io/888888/" target="_blank">
+                                            <img src="images/우주의조약돌.png" alt="">
+                                        </a>
                                     </div>
                                     <div class="swiper-slide">
-                                        <img src="images/유니세프.png" alt="">
+                                        <a href="https://1213212132.github.io/yuin/" target="_blank">
+                                            <img src="images/유니세프.png" alt="">
+                                        </a>
                                     </div>
                                     <div class="swiper-slide">
-                                        <img src="images/현대아파트.png" alt="">
+                                        <a href="https://1213212132.github.io/huhay/" target="_blank">
+                                            <img src="images/현대아파트.png" alt="">
+                                        </a>
                                     </div>
                                     <div class="swiper-slide">
-                                        <img src="images/카시아속초.png" alt="">
+                                        <a href="https://1213212132.github.io/sample3/" target="_blank">
+                                            <img src="images/카시아속초.png" alt="">
+                                        </a>
                                     </div>
                                     <div class="swiper-slide">
-                                        <img src="images/호반건설.png" alt="">
+                                        <a href="https://1213212132.github.io/hoban/" target="_blank">
+                                            <img src="images/호반건설.png" alt="">
+                                        </a>
                                     </div>
 
+
+                                    <div class="swiper-slide">
+                                        <a href="https://1213212132.github.io/hoban-2/" target="_blank">
+                                            <img src="images/호반서및.png" alt="">
+                                        </a>
+                                    </div>
                                 </div>
 
                             </div>
                             <div class="swiper-pagination"></div>
                         </div>
 
-
+                        <P class="guid">이미지를 누르시면 사이트로 이동합니다.</P>
                     </div><!-- //panerl_3 -->
                 </div><!-- //panerl -->
             </section><!-- //web -->
