--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                             <li>한국사2급</li>
                             <li>자동차운전면허 1종 보통</li>
                             <li>ITQ한글 1급</li>
-                            <li>ITQ퍼워포인트 2급</li>
+                            <li>ITQ파워포인트 2급</li>
                         </ul>
                     </div>
                     <div class="card4 card" data-4400="opacity:0; transform:translate(0%,200%);"
@@ -261,8 +261,8 @@
                         <h2>CSS</h2>
                         <ul data-10300="display:block">
                             <li> 미디어쿼리를 이용한 반응형 웹사이트 제작가능 </li>
-                            <li> CSS 애니메이션 제작 가능 </li>
-                            <li> flex,float 사용 가능 </li>
+                            <li> CSS 통해 원하는 기능 구현 가능 </li>
+                            <li> flex,float,grid 사용 가능 </li>
                         </ul>
 
                     </div>
