--- a/index.html
+++ b/index.html
@@ -279,6 +279,10 @@
                         <img src="images/draw-4067546_1280.png" alt="손">
                     </div> -->
                 </div>
+
+
+                <!-- //모니터만 움직이게 함 나머지 움직이고 싶으면 스크롤량 보고 수정!!!! -->
+
                 <div class="panerl">
                     <div class="panerl_1" data-12000="left:60px" data-15000="left:-1620px">
                         <div class="p_tit p_tit1">
@@ -317,9 +321,8 @@
                                     <!--//m_logo -->
                                     <div class="bugyeon_info">
                                         <span>info</span>
-                                        <p>부경대를 만들면서 라인에 신경을 많이 썻고 <br>
-                                            기존 사이트와 다르게 section 배치를 <br>
-                                            다르게 하였습니다
+                                        <p>부경대를 만들면서 기존 사이트와 다르게 section 배치하여 <br>
+                                            만들어 보았습니다.
                                         </p>
 
                                         <span>type</span>
@@ -450,6 +453,7 @@
                                     </div> <!-- //btn -->
                                 </div><!-- //m_desc -->
                             </div><!-- //lhbox -->
+
 
                             <div class="outbackbox">
                                 <div class="slide_wrap">
