--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                         <div class="tit_bg">
                             <img data-2000="opacity:1;" data-2300="opacity:0;" src="images/splash-4117519_1280.png"
                                 alt="명암" class="skrollable skrollable-after" style="opacity: 0;">
-                            <img src="images/ink-8162726_1280.png" alt="명암" data-2000="opacity:0; transform:scale(0);"
+                            <img src="images/ink-rrre.png" alt="명암" data-2000="opacity:0; transform:scale(0);"
                                 data-2300="opacity:1; transform:scale(1);" data-2900="opacity:1;" data-3100="opacity:0;"
                                 class="skrollable skrollable-after" style="opacity: 0; transform: scale(1);">
                             <img src="images/ink-rrre.png" alt="명암" data-3100="opacity:0;" data-3400="opacity:1;"
@@ -138,7 +138,7 @@
             <section id="about" data-4000="z-index:-10; transform:translateY(100%)"
                 data-4300="z-index:1; transform:translateY(0%)" data-11500="transform:translateX(0%);"
                 data-12000="transform:translateX(-100%);">
-                <h2>ABOUT ME</h2>
+                <!-- <h2>ABOUT ME</h2> -->
 
                 <div class="about_bg">
 
@@ -238,7 +238,7 @@
                     <div class="card9 card " data-8800="opacity:0; transform:translate(0%,100%);"
                         data-9700="opacity:1; transform:translate(0%,0%);  background-color:rgb(255,255,255);"
                         data-10500="transform:translate(100%,0%);  background-color:rgb(244,244,244);">
-                        <span>#09</span>
+                        <span class="number">#09</span>
                         <h2>portpolio</h2>
                         <ul>
                             <li>다음페이지에서 <br>
@@ -549,7 +549,7 @@
                                     <div class="panstar_info">
                                         <span>info</span>
                                         <p>기존사이트는 video를 사용하게 되면 <br>
-                                            video가 글자들을 가리게 되어 video를 <br>
+                                            video가 글자들을 가리게 되어 video를
                                             대체하여 image를 사용하였습니다.
                                         </p>
 
